--- a/pages/reserveGames/reserveGames.wxml
+++ b/pages/reserveGames/reserveGames.wxml
@@ -31,86 +31,57 @@
         <view class="rewards-top-line"></view>
       </view>
     </view>
-    <!-- 预约奖励 -->
+
     <view class="r-rewards" wx:if="{{ladders.data.length}}">
       <view style="background:url('{{elements.activity_booking_reward_bg.value}}') no-repeat center;background-size:cover;">
-          <!-- <view class="rewards-top-line"></view> -->
           <image class="r-rewards-title" mode="widthFix" src="{{elements.activity_booking_reward_title.value}}" />
           <view class="reserve-text" style="color:{{elements.activity_ordinary_text_color.value}}">
             <text>已预约</text><text class="reserve-num-text" style="color:{{elements.activity_shine_text_color.value}}">{{ladders.number}}</text><text>人</text>
           </view>
 
           <view class="reserve-progress-cont">
-            <view class="progress-bar-cont progress-bar-conts">
-              <view class="progress-bar-cont" wx:for="{{ladders.data}}" wx:key="index" wx:if="{{index===0}}">
+            <view class="progress-bar-cont progress-bar-conts" style="flex: {{ladders.data.length + 1}}">
+              <view class="bar-block">
                 <view class="bar-circle" style="background:{{elements.activity_progress_shine_color.value}}"></view>
-                <view class="bar-line" style="background:{{item.situation.status*1===1?elements.activity_progress_shine_color.value:elements.activity_progress_dark_color.value}}">
-                  <view wx:if="{{item.situation.status*1===2}}" class="bar-line-active" style="width:{{item.situation.progress*1}}%;background:{{elements.activity_progress_shine_color.value}}"></view>
-                </view>
-                <view class="bar-circle" style="background:{{item.situation.status*1===1?elements.activity_progress_shine_color.value:elements.activity_progress_dark_color.value}}"></view>
+                <view class="progress-text" style="color:{{elements.activity_shine_text_color.value}}">开启</view>
               </view>
-              <view class="progress-bar-cont"  wx:for="{{ladders.data}}" wx:key="index" wx:if="{{index===1}}">
-                <view class="bar-line" style="background:{{item.situation.status*1===1?elements.activity_progress_shine_color.value:elements.activity_progress_dark_color.value}}">
-                  <view wx:if="{{item.situation.status*1===2}}" class="bar-line-active" style="width:{{item.situation.progress*1}}%;background:{{elements.activity_progress_shine_color.value}}"></view>
+              <block wx:for="{{ladders.data}}" wx:key="index">
+                <view class="bar-block">
+                  <view class="bar-circle" style="background:{{item.situation.status*1===1?elements.activity_progress_shine_color.value:elements.activity_progress_dark_color.value}}"></view>
+                  <view class="progress-line" style="background:{{elements.activity_progress_dark_color.value}}"></view>
+                  <view class="progress-line" style="background:{{elements.activity_progress_shine_color.value}};width: {{item.situation.progress}}%"></view>
+                  <view class="progress-text" style="color:{{item.situation.status*1===1?elements.activity_shine_text_color.value:elements.activity_ordinary_text_color.value}}">{{item.require_format_number}}</view>
                 </view>
-                <view class="bar-circle" style="background:{{item.situation.status*1===1?elements.activity_progress_shine_color.value:elements.activity_progress_dark_color.value}}"></view>
-              </view>
-              <view class="progress-bar-cont"  wx:for="{{ladders.data}}" wx:key="index" wx:if="{{index===2}}">
-                <view class="bar-line" style="background:{{item.situation.status*1===1?elements.activity_progress_shine_color.value:elements.activity_progress_dark_color.value}};">
-                  <view wx:if="{{item.situation.status*1===2}}" class="bar-line-active" style="width:{{item.situation.progress*1}}%;background:{{elements.activity_progress_shine_color.value}}"></view>
-                </view>
-                <view class="bar-circle" style="background:{{item.situation.status*1===1?elements.activity_progress_shine_color.value:elements.activity_progress_dark_color.value}}"></view>
-              </view>
+              </block>
             </view>
           </view>
 
-          <view class="progress-text-cont">
-            <view class="progress-text">开启</view>
-            <view class="progress-text" wx:for="{{ladders.data}}" wx:key="index">{{item.require_format_number}}</view>
-          </view>
           <view class="reward-list-cont" wx:if="{{ladders.data.length}}">
-              <view class="reward-list" wx:for="{{ladders.data}}" wx:key="index" wx:if="{{item.mode.status*1===2 && !(item.mode.list)}}">
-                <image class="reward-list-bg" src="{{item.prize_img}}" />
-                <view class="reward-list-left"></view>
-                <view class="reward-list-right waiting-reward" data-item="{{item}}" bindtap="lookYourGift">
-                  <image class="get-gift-tag" src="{{elements.activity_winning_icon.value}}" mode="widthFix" />
-                </view>
-              </view>
-
-          <!-- 一个人中奖 -->
-              <view class="reward-list" wx:for="{{ladders.data}}" wx:key="index" wx:if="{{item.mode.list.length===1 && item.mode.status*1===3}}">
-                <image class="reward-list-bg" src="{{item.prize_img}}" />
-                <view class="reward-list-left"></view>
-                <view class="reward-list-right one-per">
-                  <view class="user-cont">
-                    <image wx:for="{{item.mode.list}}" wx:for-item="users" wx:key="index" class="list-user one-user" src="{{users.member.avatar}}" />
-                  </view>
-                  <view wx:for="{{item.mode.list}}" wx:for-item="users" wx:key="index" class="red-font"><text class="user-name">{{users.member.nickname}}</text><text>获奖</text></view>
-                </view>
-              </view>
-          <!-- 两个人的情况 -->
-              <view class="reward-list" wx:for="{{ladders.data}}" wx:key="index" wx:if="{{item.mode.list.length===2 && item.mode.status*1===3}}">
-                <image class="reward-list-bg" src="{{item.prize_img}}" />
-                <view class="reward-list-left"></view>
-                <view class="reward-list-right two-per" data-list="{{item.mode.list.length}}" bindtap="showMoreList">
-                  <view class="user-cont two-per-view">
-                    <image class="list-user" src="{{users.member.avatar}}" wx:for="{{item.mode.list}}" wx:for-item="users" wx:key="index" />
-                    <!-- <image wx:if="{{item.mode.list.length>2 && index<2}}" class="list-user" src="{{users.member.avatar}}" wx:for="{{item.mode.list}}" wx:for-item="users" wx:key="index" /> -->
-                  </view>
-                  <!-- <view class="red-font">查看获奖名单 》</view> -->
-                </view>
-              </view>
-          <!-- 多人中奖未查看 -->
-              <view class="reward-list" wx:for="{{ladders.data}}" wx:key="index" wx:if="{{item.mode.list.length>2 && item.mode.status*1===3}}">
+              <view class="reward-list" wx:for="{{ladders.data}}" wx:key="index">
                 <image class="reward-list-bg" wx:if="{{!item.showMore}}" src="{{item.prize_img}}" />
                 <view class="reward-list-left" wx:if="{{!item.showMore}}"></view>
-                <view class="reward-list-right" data-list="{{item.mode.list.length}}" data-index="{{index}}" bindtap="showMoreList" wx:if="{{!item.showMore}}">
-                  <view class="user-cont">
-                    <image wx:if="{{index<2}}" class="list-user" src="{{users.member.avatar}}" wx:for="{{item.mode.list}}" wx:for-item="users" wx:key="index" />
-                  </view>
-                  <view class="red-font">查看获奖名单 》</view>
+                <view class="reward-list-right waiting-reward" wx:if="{{item.mode.status*1===1}}">{{item.mode.msg}}</view>
+                <view class="reward-list-right waiting-reward" data-item="{{item}}" bindtap="lookYourGift" wx:elif="{{item.mode.status*1===2}}">
+                  <image class="get-gift-tag" src="{{elements.activity_winning_icon.value}}" mode="widthFix" />
                 </view>
-                <!-- 查看多人中奖的情况 -->
+                <block wx:elif="{{item.mode.status*1===3 && item.mode.list.length>0}}">
+
+                  <!-- 一个人中奖情况 -->
+                  <view class="reward-list-right one-per" wx:if="{{item.mode.list.length===1}}">
+                    <view class="user-cont">
+                      <image wx:for="{{item.mode.list}}" wx:for-item="users" wx:key="index" class="list-user one-user" src="{{users.member.avatar}}" />
+                    </view>
+                    <view wx:for="{{item.mode.list}}" wx:for-item="users" wx:key="index" class="red-font"><text class="user-name">{{users.member.nickname}}</text><text>获奖</text></view>
+                  </view>
+
+                  <!-- 两个人以上中奖情况 -->
+                  <block wx:if="{{item.mode.list.length>1}}">
+                    <view class="reward-list-right" data-list="{{item.mode.list.length}}" data-index="{{index}}" bindtap="showMoreList" wx:if="{{!item.showMore}}">
+                      <view class="user-cont">
+                      <image wx:if="{{index<2}}" class="list-user" src="{{users.member.avatar}}" wx:for="{{item.mode.list}}" wx:for-item="users" wx:key="index" />
+                      </view>
+                      <view class="red-font">查看获奖名单 》</view>
+                    </view>
                     <view class="reward-list users-reward-list" wx:if="{{item.showMore}}">
                       <scroll-view scroll-x="true" class="list-users-cont">
                         <view class="user-avatar-view">
@@ -122,16 +93,19 @@
                       </scroll-view>
                       <view class="reward-list-right waiting-reward"><text class="red-font" data-index="{{index}}" bindtap="hideMoreList">《 收起获奖名单</text></view>
                     </view>
+                  </block>
+
+                </block>
+
+                <!-- 没有任何人中奖 -->
+                <view class="reward-list-right waiting-reward" wx:else>无人中奖</view>
               </view>
-              <view class="reward-list" wx:for="{{ladders.data}}" wx:key="index" wx:if="{{item.mode.status*1===1 && (index===1 || index===2 || index===0)}}">
-                <image class="reward-list-bg" src="{{item.prize_img}}" />
-                <view class="reward-list-left"></view>
-                <view class="reward-list-right waiting-reward">{{item.mode.msg}}</view>
-              </view>
-            </view>
+          </view>
+
         <view class="rewards-botom-line"></view>
       </view>
     </view>
+
     <view class="prize-big-bg" wx:if="{{activity.open_reward*1!==2}}">
       <view class="prize-cont" style="background:url('{{elements.activity_lucky_draw_rule_bg.value}}') no-repeat center;background-size:cover;">
         <!-- 预约抽奖 -->
