--- a/pages/reserveGames/reserveGames.wxss
+++ b/pages/reserveGames/reserveGames.wxss
@@ -146,11 +146,12 @@ button::after{border: none}
 .reserve-progress-cont{margin: 34rpx auto 10rpx;}
 .progress-bar-cont{display: flex;
   position: relative;margin:0 90rpx 100rpx}
-.bar-block {width: 100%;position: relative;height: 50rpx}
-.bar-block:first-child{width: 0;}
-.bar-circle{width: 20rpx;height: 20rpx;background: #0C2E50;border-radius: 50%;position: absolute;right: 0;top: 50%;margin: -10rpx 0 0 0;z-index: 66}
+.bar-block {width: 100%;position: relative;height: 50rpx;margin-right: 20rpx}
+.bar-block:first-child{width: 0;margin-right: 0}
+.bar-circle{width: 20rpx;height: 20rpx;background: #0C2E50;border-radius: 50%;position: absolute;right: -19rpx;top: 50%;margin: -10rpx 0 0 0;z-index: 66}
 .progress-text{font-size: 28rpx;text-align: center;width: 100%;position: absolute;top: 60rpx;left: 50%;text-indent: -10rpx}
 .bar-block:first-child .progress-text{width: 100rpx;left: 50%;margin: 0 0 0 -50rpx}
+.bar-block:first-child .bar-circle{right: 0}
 .progress-line {width: 100%;height: 6rpx;position: absolute;left: 0;top:50%;margin: -3rpx 0 0 0}
 .circles-cont{position: absolute;left: 76rpx;top:-8rpx;width: 590rpx;display: flex;align-items: center;justify-content: space-between;}
 .wx-progress{width: 590rpx;margin-left: 78rpx;}
@@ -255,7 +256,7 @@ button.invite-btn{background: none}
   box-shadow: 1px 10px 10px rgba(250, 89, 97, 0.35);
 }
 .rewards-top-line{
-  width: 670rpx;height: 2rpx;background: rgba(255,255,255,0.2);
+  width: 670rpx;height: 2rpx;background: rgba(255,255,255,0.35);
   position: absolute;left: 40rpx;bottom: 0
 }
 .reward-list-bg{position: absolute;left: 0;top:0;width: 100%;height: 100%}
@@ -266,9 +267,9 @@ button.invite-btn{background: none}
   width: 670rpx;
   /* margin-left: 50rpx; */
 }
-.rewards-botom-line{position: absolute;left: 40rpx;bottom: 0;width: 670rpx;height: 2rpx;background: rgba(255,255,255,0.2);}
+.rewards-botom-line{position: absolute;left: 40rpx;bottom: 0;width: 670rpx;height: 2rpx;background: rgba(255,255,255,0.35);}
 .button-hover{background: none}
-.gift-dot-line{width: 100%;height: 1rpx;border-top: 2rpx dotted rgba(255, 255, 255, 0.2);margin-bottom: 24rpx;}
+.gift-dot-line{width: 100%;height: 1rpx;border-top: 2rpx dotted rgba(255, 255, 255, 0.35);margin-bottom: 24rpx;}
 .ranks{
   color: #E5E7ED;font-size: 24rpx;margin: 0 auto 60rpx;overflow: hidden;
   width: 690rpx;height: 280rpx;background: rgba(0, 0, 0, 0.2);border-radius: 10rpx;
@@ -279,7 +280,7 @@ button.invite-btn{background: none}
 .user-avatar{width: 40rpx;height: 40rpx;border-radius: 50%;margin-right: 12rpx;border: 1rpx solid #eee}
 .prize-text{margin-left: 14rpx;max-width: 300rpx;overflow: hidden;white-space: nowrap;text-overflow: ellipsis;}
 .red-font{color: #FA5961}
-.gift-botom-line{width: 670rpx;height: 2rpx;background: rgba(255, 255, 255, 0.2);margin: 0 auto 60rpx;}
+.gift-botom-line{width: 670rpx;height: 2rpx;background: rgba(255, 255, 255, 0.35);margin: 0 auto 60rpx;}
 .prize-big-bg{position: relative;}
 .prize-bg-img-view{position: absolute;left: 0;top:0;width: 100%;z-index: 2;height: 100%;}
 .prize-bg-img{display: block;width: 100%;height: 100%}
