--- a/pages/invitePrize/invitePrize.wxml
+++ b/pages/invitePrize/invitePrize.wxml
@@ -21,7 +21,8 @@
           <view class="break-text">已接受邀请的好友</view>
           <view class="doted-line"></view>
         </view>
-        <view wx:if="{{inviteDatas.friend.length===0}}" class="no-friends-view">暂无邀请好友哦，快去邀请吧~</view>
+        <button wx:if="{{inviteDatas.friend.length===0 && showGetPrizeBtn}}" class="no-friends-view" open-type="share">暂无邀请好友哦，<text class="blue-text">快去邀请吧~</text></button>
+        <view wx:if="{{inviteDatas.friend.length===0 && !showGetPrizeBtn}}" class="no-friends-view">暂无邀请好友哦，快去邀请吧~</view>
         <scroll-view wx:if="{{inviteDatas.friend.length}}" scroll-x="{{true}}" class="card-scroll-view">
           <image wx:for="{{inviteDatas.friend}}" wx:key="index" class="user-friend-avatar" src="{{item.be_invite_member.avatar || '/images/avatarDefault.png'}}" />
         </scroll-view>
