--- a/pages/getGift/getGift.wxss
+++ b/pages/getGift/getGift.wxss
@@ -86,7 +86,9 @@ page{background: #260846;}
 }
 .pin-dialog{margin-top: 146rpx;width: 100%;height: auto;border-radius: 30rpx;position: relative;}
 .get-prize-btn-close{margin-top: 200rpx;}
-.rank-swiper{width: 100%;height: 44rpx;padding-bottom: 10rpx;margin-bottom: 20rpx;margin-top: 30rpx}
+.rank-swiper{width: 100%;padding-bottom: 10rpx;margin-bottom: 20rpx;margin-top: 30rpx;
+  /* height: 44rpx; */
+}
 button::after{border: none;}
 button{padding: 0}
 .pinmy-tip-title{margin-bottom: 60rpx}
